V1.2
New Features:
Changes:
  - no projectile, only energy damage types for blaster, thrower, and beam rifle
  - scout rifle has lower damage to offset max range
  - add truncheon melee type

v1.1
New Features:
  - generate price
  - add basic melee
  - add advanced melee
  - add acid damage type
  - add new gun types
Changes:
  - add background, pixel stars
  - refactor crit dice
  - Kinetic weapons damage increased compared to Energy weapons (didn't notice this trend in initial generator)