@@ -1,6 +1,8 @@
 V1.2
 New Features:
+  - Name Generator
 Changes:
+  - change Swoop Hammer to Longhammer
   - no projectile, only energy damage types for blaster, thrower, and beam rifle
   - scout rifle has lower damage to offset max range
   - add truncheon melee type
